--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,3 @@
-
 .todo-container {
     width: 25%;
     margin: auto;
@@ -9,4 +8,12 @@
     padding: 10px;
     text-align: center;
 
+}
+.delete-button {
+    color: red;
+    padding-left: 10px;
+    justify-content: right;
+}
+.field {
+    width: 100%;
 }
